--- a/html/index.html
+++ b/html/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>metrics-mock</title>
+  <title>metricsbin</title>
 </head>
 
 <body>
   <main>
     <h1>
-      metrics-mock
+      metricsbin
     </h1>
     <a href="/metrics">metrics</a>
     <section>
